[tool.poetry]
name = "cairo"
version = "0.1.0"
description = ""
authors = ["Boarmon <xiaolang001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cairo-lang = "^0.11.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua-source"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true